<resources>
    <string name="app_name">Assignment</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="do_not_have_account">Do not have account?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="fsa_login">FSA Login</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="keep_me_logged_in">Keep Me Logged In</string>
    <string name="more_info">more info</string>
    <string name="food_standards_agency">Food Standards Agency</string>
    <string name="authorized_info">Authorized Info:</string>
    <string name="hygine">Hygine:</string>
    <string name="structural">Structural:</string>
    <string name="management">Management:</string>
    <string name="scores">Scores:</string>
    <string name="authority_name">Authority name:</string>
    <string name="less_info">less info</string>

    <string name="file_provider" translatable="false">com.kroegerama.imgpicker.demo.fileprovider</string>
    <string name="pick_single">Please select your image</string>
</resources>